--- a/app/src/main/res/menu/fragment_main_drawer.xml
+++ b/app/src/main/res/menu/fragment_main_drawer.xml
@@ -4,19 +4,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_home"
             android:title="Home"  />
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_profile"
             android:title="Profile" />
         <item
             android:id="@+id/nav_myWorkouts"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_list"
             android:title="My Workouts" />
         <item
             android:id="@+id/nav_exercises"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_dumbbell"
             android:title="Exercises" />
         <item
             android:id="@+id/nav_manage"
