--- a/app/src/main/res/layout/activity_exercise_info.xml
+++ b/app/src/main/res/layout/activity_exercise_info.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@id/drawer_layout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,6 +11,7 @@
         android:id="@+id/exercise_info_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.example.gleative.workit.fragments.ExerciseListFragment"/>
+        android:name="com.example.gleative.workit.fragments.ExerciseInfoFragment"
+        tools:layout="@layout/fragment_exercise_info" />
 
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
