--- a/app/src/main/res/layout/fragment_exercise_info.xml
+++ b/app/src/main/res/layout/fragment_exercise_info.xml
@@ -74,12 +74,12 @@
     </android.support.design.widget.CoordinatorLayout>
 
 
-    <fragment
-        android:id="@+id/navigation_drawer_fragment"
-        android:name="com.example.gleative.workit.fragments.NavigationDrawerFragment"
-        android:layout_width="@dimen/navigation_drawer_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        tools:layout="@layout/fragment_navigation_drawer"/>
+    <!--<fragment-->
+        <!--android:id="@+id/navigation_drawer_fragment"-->
+        <!--android:name="com.example.gleative.workit.fragments.NavigationDrawerFragment"-->
+        <!--android:layout_width="@dimen/navigation_drawer_width"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start"-->
+        <!--tools:layout="@layout/fragment_navigation_drawer"/>-->
 
 </android.support.v4.widget.DrawerLayout>
