Fragment now finally works! Now try to implement Slider with ViewPager

--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -33,7 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:name="com.example.gleative.workit.fragments.ExerciseListFragment"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:layout="@layout/fragment_exercise_list" />
 
     </android.support.design.widget.CoordinatorLayout>
 
