--- a/app/src/main/res/layout/fragment_exercise_info.xml
+++ b/app/src/main/res/layout/fragment_exercise_info.xml
@@ -24,26 +24,41 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:contentScrim="?attr/colorPrimary">
 
-                <!--ImageView må være før toolbar, ellers kan du ikke se hamburger icon!-->
-                <ImageView
-                    android:id="@+id/exercise_picture"
-                    android:layout_width="match_parent"
-                    android:layout_height="256dp"
-                    android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax"
-                    android:src="@drawable/testpicture"/>
-
-                    <!--Lager en toolbar-->
-                    <android.support.v7.widget.Toolbar
-                        android:id="@+id/toolbar"
+                <!--<android.support.v4.view.ViewPager-->
+                    <!--android:id="@+id/viewPager"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="256dp">-->
+                    <!--ImageView må være før toolbar, ellers kan du ikke se hamburger icon!-->
+                    <ImageView
+                        android:id="@+id/exercise_picture"
                         android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                        app:layout_scrollFlags="scroll|enterAlways"/>
-                    <!--Linje 41 gjør at baren på toppen går vekk når du scroller-->
+                        android:layout_height="256dp"
+                        android:scaleType="centerCrop"
+                        app:layout_collapseMode="parallax"
+                        android:src="@drawable/testpicture"/>
+                <!--</android.support.v4.view.ViewPager>-->
 
+                <!--Lager en toolbar-->
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    app:layout_scrollFlags="scroll|enterAlways"/>
+                <!--Linje 41 gjør at baren på toppen går vekk når du scroller-->
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    app:layout_collapseMode="parallax"
+                    android:gravity="bottom|end">
+                    <!--gravity bottom|end makes so it is in the right bottom corner-->
+                    <ToggleButton
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"/>
+                </LinearLayout>
 
             </android.support.design.widget.CollapsingToolbarLayout>
         </android.support.design.widget.AppBarLayout>
