--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -26,11 +26,16 @@
             <!--Linje 25 gjør at baren på toppen går vekk når du scroller-->
         </android.support.design.widget.AppBarLayout>
 
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="25dp"
+            android:src="@drawable/ic_action_add"/>
+
     </android.support.design.widget.CoordinatorLayout>
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
+
 
 
     <!--Gjør at vi får navigation drawer i denne aktivitien-->
