--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -8,10 +8,10 @@
     android:theme="@style/AppTheme.NoActionBar"
     tools:context="com.example.gleative.workit.ExerciseActivity">
 
-    <android.support.design.widget.CoordinatorLayout
+    <LinearLayout
         android:layout_width="match_parent"
-
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -23,7 +23,17 @@
                 android:layout_height="?attr/actionBarSize"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_scrollFlags="scroll|enterAlways"/>
+                app:layout_scrollFlags="scroll|enterAlways">
+
+                <Spinner
+                    android:id="@+id/category_spinner"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:spinnerMode="dropdown">
+                </Spinner>
+            </android.support.v7.widget.Toolbar>
+
+
             <!--Linje 25 gjør at baren på toppen går vekk når du scroller-->
         </android.support.design.widget.AppBarLayout>
 
@@ -36,7 +46,7 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:layout="@layout/fragment_exercise_list" />
 
-    </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
 
 
 
