--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="25dp"
+            android:onClick="createWorkout"
             android:src="@drawable/ic_action_add"/>
 
     </android.support.design.widget.CoordinatorLayout>
