--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -8,7 +8,7 @@
     android:theme="@style/AppTheme.NoActionBar"
     tools:context="com.example.gleative.workit.ExerciseActivity">
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -24,13 +24,15 @@
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:layout_scrollFlags="scroll|enterAlways">
+                <!--If toolbar doesnt dissapear when scrolling down, it is because it has to be coordinatorlayout!!-->
 
                 <Spinner
                     android:id="@+id/category_spinner"
-                    android:layout_width="250dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:spinnerMode="dropdown">
-                </Spinner>
+                    android:spinnerMode="dropdown"
+                    android:popupBackground="@color/colorRed"/>
+                <!--popBackground is background color for the drop down menu-->
             </android.support.v7.widget.Toolbar>
 
 
@@ -46,7 +48,7 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:layout="@layout/fragment_exercise_list" />
 
-    </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
 
 
