--- a/app/src/main/res/layout/fragment_exercise_info.xml
+++ b/app/src/main/res/layout/fragment_exercise_info.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.gleative.workit.ExerciseInfoActivity">
-
 
     <!--Må ha en egen layout for innhold, ellers dekker action bar hele skjermen-->
     <android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context="com.example.gleative.workit.ExerciseInfoActivity">
+
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
@@ -35,6 +32,7 @@
                         android:layout_height="256dp"
                         android:scaleType="centerCrop"
                         app:layout_collapseMode="parallax"
+                        app:layout_collapseParallaxMultiplier="0.9"
                         android:src="@drawable/testpicture"/>
                 <!--</android.support.v4.view.ViewPager>-->
 
@@ -50,12 +48,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    app:layout_collapseMode="parallax"
                     android:gravity="bottom|end">
                     <!--gravity bottom|end makes so it is in the right bottom corner-->
                     <ToggleButton
                         android:layout_width="50dp"
-                        android:layout_height="50dp"/>
+                        android:layout_height="50dp" />
                 </LinearLayout>
 
             </android.support.design.widget.CollapsingToolbarLayout>
@@ -72,17 +69,29 @@
             app:layout_anchorGravity="bottom|right|end"
             />
 
-        <!--app:layout_behavior and value makes so its under the AppBarLayout!-->
-        <LinearLayout
+        <!--This was needed so the textview can be grabbed and scrolled, and the toolbar collapses aswell with it-->
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
-            <TextView
-                android:id="@+id/exercise_description"
+            <!--app:layout_behavior and value makes so its under the AppBarLayout!-->
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Desc"/>
-        </LinearLayout>
+                android:layout_margin="8dp"
+                app:cardElevation="8dp"
+                app:contentPadding="10dp"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                    <TextView
+                        android:id="@+id/exercise_description"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Desc"
+                        android:padding="5dp"/>
+            </android.support.v7.widget.CardView>
+
+        </android.support.v4.widget.NestedScrollView>
 
     </android.support.design.widget.CoordinatorLayout>
 
@@ -95,4 +104,3 @@
         <!--android:layout_gravity="start"-->
         <!--tools:layout="@layout/fragment_navigation_drawer"/>-->
 
-</android.support.v4.widget.DrawerLayout>
