Workout data and recyclerview fixed

--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -9,7 +9,6 @@
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-
         android:layout_height="match_parent">
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -30,12 +29,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="25dp"
+            android:layout_margin="20dp"
             android:onClick="createWorkout"
             android:src="@drawable/ic_action_add"/>
 
-    </android.support.design.widget.CoordinatorLayout>
 
+        <fragment
+            android:id="@+id/workout_list_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:name="com.example.gleative.workit.fragments.WorkoutListFragment"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:layout="@layout/fragment_exercise_list" />
+
+
+    </android.support.design.widget.CoordinatorLayout>
 
 
 
