--- a/app/src/main/res/layout/list_workout.xml
+++ b/app/src/main/res/layout/list_workout.xml
@@ -3,6 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    card_view:contentPadding="10dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginTop="5dp">
@@ -17,29 +18,33 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="start"
+            android:paddingEnd="10dp"
             android:src="@drawable/ic_dumbbell"
             />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:orientation="vertical">
             <!--Weight makes the size of the object bigger-->
             <TextView
                 android:id="@+id/workout_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:text="Title"/>
 
             <TextView
+                android:id="@+id/workout_exercise_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Exercises: "/>
+
+            <TextView
                 android:id="@+id/workout_targeted_muscle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_height="wrap_content"
                 android:text="Main muscle"/>
 
             </LinearLayout>
