--- a/app/src/main/res/layout/list_exercises_add.xml
+++ b/app/src/main/res/layout/list_exercises_add.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@drawable/ic_action_add"
+            android:layout_marginEnd="10dp"
             android:onClick="addExercise"/>
 
         <LinearLayout
