--- a/app/src/main/res/layout/fragment_exercise_info.xml
+++ b/app/src/main/res/layout/fragment_exercise_info.xml
@@ -37,7 +37,7 @@
                 <!--</android.support.v4.view.ViewPager>-->
 
                 <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
+                    android:id="@+id/exercise_name"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
