Can now add a workout, but no customExercises yet! Have tried to have another layout when trying to add custom exercise, but have strange error... Commented out for so long!

--- a/app/src/main/res/layout/list_exercises_add.xml
+++ b/app/src/main/res/layout/list_exercises_add.xml
@@ -17,13 +17,17 @@
         android:background="@android:color/white"
         android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addSelectedExerciseButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_action_add"
             android:layout_marginEnd="10dp"
-            android:onClick="addExercise"/>
+            android:scaleType="center"
+            />
+        <!--scaleType makes so the pluss icon is bigger-->
 
         <LinearLayout
             android:layout_width="match_parent"
