--- a/app/src/main/res/layout/activity_create_custom_exercise.xml
+++ b/app/src/main/res/layout/activity_create_custom_exercise.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.gleative.workit.CreateCustomExerciseActivity">
+    tools:context="com.example.gleative.workit.CreateCustomExerciseActivity"
+    tools:layout_editor_absoluteY="25dp"
+    tools:layout_editor_absoluteX="0dp">
 
-    <ImageView
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/e12_1" />
+    <fragment
+        android:id="@+id/create_custom_exercise_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.example.gleative.workit.fragments.CreateCustomExerciseFragment"
+        tools:layout="@layout/fragment_create_custom_exercise"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
