--- a/app/src/main/res/layout/fragment_create_custom_exercise.xml
+++ b/app/src/main/res/layout/fragment_create_custom_exercise.xml
@@ -46,23 +46,11 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
-        android:id="@+id/reps"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:hint="Reps"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <EditText
+        android:id="@+id/sets"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:hint="Sets"
+        android:inputType="number"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
@@ -70,14 +58,29 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <EditText
+        android:id="@+id/reps"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:hint="Reps"
+        android:inputType="number"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/sets"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/editText" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/add_custom_exercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Exercise"
+        android:onClick="addCustomExerciseToWorkout"
         android:layout_marginTop="173dp"
         app:layout_constraintTop_toBottomOf="@+id/reps"
         android:layout_marginRight="8dp"
