--- a/app/src/main/res/layout/fragment_create_workout.xml
+++ b/app/src/main/res/layout/fragment_create_workout.xml
@@ -45,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add Exercises"
+            android:onClick="addExerciseToWorkout"
             android:layout_marginTop="181dp"
             app:layout_constraintTop_toBottomOf="@+id/workout_desc"
             android:layout_marginRight="8dp"
